--- a/reducer-todo/src/App.css
+++ b/reducer-todo/src/App.css
@@ -20,3 +20,19 @@
 .App-link {
   color: #09d3ac;
 }
+
+input {
+  padding: 10px 15px;
+  margin: 3%;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+button {
+  font-size: 1rem;
+  text-decoration: none;
+  background: #09d3ac;
+  padding: 5px 5px;
+  border-radius: 50px;
+  color: white;
+  margin: 1%;
+}
